package com.online.chargingSystem.controller;

import com.online.chargingSystem.common.Result;
import com.online.chargingSystem.entity.ChargingPile;
import com.online.chargingSystem.service.ChargingPileService;
import org.springframework.beans.factory.annotation.Autowired;
import org.springframework.web.bind.annotation.*;

/**
 * 充电桩控制器
 * 处理充电桩相关的请求，包括查询充电桩状态、故障报告、故障恢复等
 */
@RestController
@RequestMapping("/api/charging-pile")
public class ChargingPileController {

    @Autowired
    private ChargingPileService chargingPileService;

    /**
     * 获取充电桩状态
     * @param pileId 充电桩ID
     * @return 充电桩状态信息
     */
    @GetMapping("/status")
    public Result<?> getPileStatus(@RequestParam String pileId) {
        ChargingPile result = chargingPileService.getPileStatus(pileId);
        return result != null ? Result.success(result) : Result.error("充电桩不存在");
    }

    /**
     * 报告充电桩故障
     * @param pileId 充电桩ID
     * @param faultType 故障类型
     * @param description 故障描述
     * @return 故障报告结果
     */
    @PostMapping("/fault/report")
    public Result<?> reportFault(@RequestParam String pileId,
                            @RequestParam String faultType,
                            @RequestParam String description) {
        boolean result = chargingPileService.reportFault(pileId, faultType, description);
        return result ? Result.success("故障报告成功") : Result.error("故障报告失败");
    }

    /**
     * 恢复充电桩
     * @param pileId 充电桩ID
     * @param resolution 故障解决方案
     * @return 恢复结果
     */
    @PostMapping("/fault/resolve")
    public Result<?> resolveFault(@RequestParam String pileId,
                             @RequestParam String resolution) {
        boolean result = chargingPileService.resolveFault(pileId, resolution);
        return result ? Result.success("故障恢复成功") : Result.error("故障恢复失败");
    }

    /**
     * 开启充电桩
     * @param pileId 充电桩ID
     * @return 开启结果
     */
    @PostMapping("/power-on")
    public Result<?> powerOn(@RequestParam String pileId) {
        boolean result = chargingPileService.powerOn(pileId);
        return result ? Result.success("开机成功") : Result.error("开机失败");
    }

    /**
     * 设置充电桩参数
     * @param pileId 充电桩ID
     * @param chargingPower 充电功率
     * @return 设置结果
     */
    @PostMapping("/set-parameters")
    public Result<?> setParameters(@RequestParam String pileId,
                              @RequestParam Double chargingPower) {
        boolean result = chargingPileService.setParameters(pileId, chargingPower);
        return result ? Result.success("参数设置成功") : Result.error("参数设置失败");
    }

    /**
     * 启动充电桩
     * @param pileId 充电桩ID
     * @return 启动结果
     */
    @PostMapping("/start")
    public Result<?> startChargingPile(@RequestParam String pileId) {
        boolean result = chargingPileService.startChargingPile(pileId);
        return result ? Result.success("启动成功") : Result.error("启动失败");
    }

    /**
     * 关闭充电桩
     * @param pileId 充电桩ID
     * @return 关闭结果
     */
    @PostMapping("/power-off")
    public Result<?> powerOff(@RequestParam String pileId) {
        boolean result = chargingPileService.powerOff(pileId);
        return result ? Result.success("关机成功") : Result.error("关机失败");
    }

    /**
     * 查询充电桩状态
     * @param pileId 充电桩ID
     * @return 充电桩状态信息
     */
    @GetMapping("/state")
    public Result<?> queryPileState(@RequestParam String pileId) {
        ChargingPile result = chargingPileService.queryPileState(pileId);
        return result != null ? Result.success(result) : Result.error("查询失败");
    }
} 