package com.online.chargingsystem.service;

public interface DetailedListService {
    Object requestDetailedList(String billId);
} 